--- a/aboutme.html
+++ b/aboutme.html
@@ -16,7 +16,7 @@
  <body>
 <div class="topnav">
 
-<a href="mysite.html">Home</a>
+<a href="index.html">Home</a>
 <a href="mycontactinfo.html">My Contact Info</a>
 <a href="aboutme.html">About Me</a>
 <a href="portfolio.html">Portfolio</a>
