--- a/aboutme.html
+++ b/aboutme.html
@@ -111,7 +111,7 @@ I spend most of my free time playing games, watching tv and movies, and reading 
  
  <a href="mycontactinfo.html" class="previous">&laquo; Previous</a>
 <a href="portfolio.html" class="next">Next &raquo;</a>
-<a href="mysite.html" class="next round"> Home</a>
+<a href="index.html" class="next round"> Home</a>
 <br><br><br><br>
 
  </div>
