--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
  <body>
 <div class="topnav">
 
-<a href="mysite.html">Home</a>
+<a href="index.html">Home</a>
 <a href="mycontactinfo.html">My Contact Info</a>
 <a href="aboutme.html">About Me</a>
 <a href="portfolio.html">Portfolio</a>
@@ -53,7 +53,7 @@
  <a href="portfolio.html" class="previous">&laquo; Previous</a>
 <a href="mycontactinfo.html" class="next">Next &raquo;</a>
 
-<a href="mysite.html" class="next round"> Home</a>
+<a href="index.html" class="next round"> Home</a>
 
  </div>
  <br><br><br><br>
